--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,9 @@ authors = [
 version = "0.0.1"
 description = "A simple tool that automate checkpointing. "
 readme = "README.md"
+requires-python = ">=3.8"
 dependencies = [
-    "pandas",
-    'python_version>"3.7"',
+    "pandas"
 ]
 [project.urls]
 Homepage = "https://github.com/yurun-yuan/pycheckpoint"
