--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,11 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "pycheckpoint"
+name = "pychequepoint"
 authors = [
   { name="Yurun Yuan", email="yurun.yuan@outlook.com" },
 ]
-version = "0.0.1"
+version = "0.0.2"
 description = "A simple tool that automate checkpointing. "
 readme = "README.md"
 requires-python = ">=3.8"
